# long-context-retrieval

./: .gitignore  Makefile  README.md  nohup2.out  pyproject.toml
lcr/: __init__.py  anthropic_preprocessor.py  config.py  dataset.py  eval_utils.py  features.py  formatter.py  generate_queries.py  mps_test.py  plots.py  query_creation.py  query_generator.py  utils.py  waterfall_preprocessor.py
lcr/cli/: anthropic_contextualise_dataset.py  eval.py  filter_queries.py  generate_queries.py  waterfall_contextualise_dataset.py
lcr/modeling/: base_embedder.py  bge_m3_embedder.py  bm25_embedder.py  predict.py  sentence_transformer_embedder.py  train.py
lcr/visualisation/: visualise_compare.py  visualise_jsonl.py  visualise_results_jsonl.py
notebooks/: acpt_allcpt_danish.ipynb  acpt_allcpt_polish.ipynb  average_embedding.ipynb  average_node_length.ipynb  bm25.ipynb  danish_distance_analysis.ipynb  dataset_token_analysis.ipynb  distance_analysis.ipynb  polish_dataset_analysis.ipynb  polish_distance_analysis.ipynb  polish_r4_lexical_overlap copy.ipynb  polish_r6_lexical_overlap.ipynb  polish_token_analysis.ipynb  query_generator_token_analysis.ipynb  test_cache.ipynb
prompts/: assurance_prompt.j2  assurance_prompt_r10.j2  assurance_prompt_r4.j2  assurance_prompt_r45.j2  assurance_prompt_r6.j2  assurance_prompt_r7.j2  assurance_prompt_r8.j2  assurance_prompt_r9.j2  assurance_prompt_v7_impl.j2  assurance_prompt_v7_impl_2.j2  assurance_prompt_v7_impl_is_only.j2  assurance_prompt_v7_impl_whowhichwhat_r5.j2  assurance_prompt_v7_r1.j2  query_generation_prompt_r4norerun.j2  query_generation_prompt_r9.j2  query_prompt.j2  query_prompt_r4.j2  query_prompt_r6.j2  query_prompt_r7.j2  query_prompt_r8.j2  query_prompt_rattish.j2  query_prompt_v7_impl.j2  query_prompt_v7_impl_2_r3.j2  query_prompt_v7_impl_is_only_r4.j2  query_prompt_v7_impl_whowhichwhat_only_r5.j2  query_prompt_v7_r2.j2
scripts/: ablation.sh  add_chunk_idx.sh  anthropic_contextualise.sh  anthropic_contextualise_hpc.sh  anthropic_contextualise_single.sh  anthropic_contextualise_tmp.sh  assurance_filter_queries.sh  assure_queries.sh  assure_queries_single.sh  clean_contextualisation_failures.sh  eval_bm25.sh  eval_cpu.sh  eval_gpu.sh  eval_non_contextual_queries.sh  generate_queries.sh  iter_queries.sh  lumi_anthropic.sh  lumi_anthropic_danish.sh  lumi_generate_queries_and_assurance.sh  lumi_waterfall.sh  merge.sh  merge_chunks.sh  rank_filter_queries.sh  sota.sh  structure_cluster.sh  update_queries.sh  visualise_compare.sh  waterfall_contextualise.sh
