[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lcr"
version = "0.0.1"
description = "Long Context Retrieval ITU Bachelor Project"
authors = [
  { name = "Maciej Jalocha, William Michelsen" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
# also: remember to install models for spacy
# python -m spacy download da_core_news_sm
# python -m spacy download pl_core_news_sm


dependencies = [
    "beautifulsoup4>=4.14.3",
    "bm25s>=0.3.8",
    "datasets>=4.8.4",
    "flagembedding>=1.3.5",
    "jinja2>=3.1.6",
    "loguru",
    "numba>=0.65.1",
    "openai>=2.30.0",
    "pip",
    "python-dotenv",
    "pytrec-eval>=0.5",
    "ruff",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "tiktoken>=0.12.0",
    "tqdm",
    "transformers<5",
    "typer",
    # "contextual_embeddings @ file:///home/mpj/repositories/contextual-embeddings",
]
requires-python = "~=3.11.0"
[project.optional-dependencies]
# for cpu: to be run with uv pip install .[deps] --extra-index-url https://download.pytorch.org/whl/cpu
# for mps or gpu: with no extra
deps = [ 
    "sentence-transformers",
    "torch",
]

[tool.ruff]
line-length = 99
src = ["lcr"]
include = ["pyproject.toml", "lcr/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lcr"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

